--- a/config.json
+++ b/config.json
@@ -22,17 +22,18 @@
     },
     "hereAPIKey":"eG2NCop0Fa_k1JUQUaiZvkt-pQKlSlYODS_UwKqaD6c",
     "minZ":{
-        "url":"http://localhost:8191",
+        "url_bak":"http://localhost:8191",
+        "url":"http://www.pomeo.cl:8083/minz",
         "token":"geop-public"
     },
     "proveedores":[{
         "codigo":"gfs4",
-        "url":"http://localhost:8181",
-        "url_bak":"http://www.pomeo.cl:8083/gfs4"
+        "url_bak":"http://localhost:8181",
+        "url":"http://www.pomeo.cl:8083/gfs4"
     }, {
         "codigo":"ww3",
-        "url":"http://localhost:8187",
-        "url_bak":"http://www.pomeo.cl:8083/ww3"
+        "url_bak":"http://localhost:8187",
+        "url":"http://www.pomeo.cl:8083/ww3"
     }, {
         "codigo":"servimet",
         "url_bak":"http://localhost:8183",
@@ -43,20 +44,20 @@
         "url":"http://www.pomeo.cl:8083/fixed"
     }, {
         "codigo":"huinay",
-        "url":"http://localhost:8186",
-        "url_bak":"http://www.pomeo.cl:8083/huinay"
+        "url_bak":"http://localhost:8186",
+        "url":"http://www.pomeo.cl:8083/huinay"
     }, {
         "codigo":"bcn",
-        "url":"http://localhost:8188",
-        "url_bak":"http://www.pomeo.cl:8083/bcn"
+        "url_bak":"http://localhost:8188",
+        "url":"http://www.pomeo.cl:8083/bcn"
     }, {
         "codigo":"fipafan2019",
-        "url":"http://localhost:8190",
-        "url_bak":"http://www.pomeo.cl:8083/fipafan2019"
+        "url_bak":"http://localhost:8190",
+        "url":"http://www.pomeo.cl:8083/fipa-fan-2019"
     }, {
         "codigo":"copernicus",
-        "url":"http://localhost:8189",
-        "url_bak":"http://www.pomeo.cl:8083/copernicus"
+        "url_bak":"http://localhost:8189",
+        "url":"http://www.pomeo.cl:8083/copernicus"
     }],
     "plugins":["./base-plugin/BasePlugin.js", "./ow-plugin/OWPlugin.js"],
     "grupos":[{
