--- a/config.json
+++ b/config.json
@@ -23,41 +23,45 @@
     "hereAPIKey":"eG2NCop0Fa_k1JUQUaiZvkt-pQKlSlYODS_UwKqaD6c",
     "minZ":{
         "url_bak":"http://localhost:8191",
-        "url":"http://www.pomeo.cl:8083/minz",
+        "url":"https://provider.geoos.org/minz",
         "token":"geop-public"
     },
     "proveedores":[{
         "codigo":"gfs4",
         "url_bak":"http://localhost:8181",
-        "url":"http://www.pomeo.cl:8083/gfs4"
+        "url":"https://provider.geoos.org/gfs4"
     }, {
         "codigo":"ww3",
         "url_bak":"http://localhost:8187",
-        "url":"http://www.pomeo.cl:8083/ww3"
+        "url":"https://provider.geoos.org/ww3"
     }, {
         "codigo":"servimet",
         "url_bak":"http://localhost:8183",
-        "url":"http://www.pomeo.cl:8083/servimet"
+        "url":"https://provider.geoos.org/servimet"
     }, {
         "codigo":"fixed",
         "url_bak":"http://localhost:8184",
-        "url":"http://www.pomeo.cl:8083/fixed"
+        "url":"https://provider.geoos.org/fixed"
     }, {
         "codigo":"huinay",
         "url_bak":"http://localhost:8186",
-        "url":"http://www.pomeo.cl:8083/huinay"
+        "url":"https://provider.geoos.org/huinay"
     }, {
         "codigo":"bcn",
         "url_bak":"http://localhost:8188",
-        "url":"http://www.pomeo.cl:8083/bcn"
+        "url":"https://provider.geoos.org/bcn"
     }, {
         "codigo":"fipafan2019",
         "url_bak":"http://localhost:8190",
-        "url":"http://www.pomeo.cl:8083/fipa-fan-2019"
+        "url":"https://provider.geoos.org/fipa-fan-2019"
     }, {
         "codigo":"copernicus",
         "url_bak":"http://localhost:8189",
-        "url":"http://www.pomeo.cl:8083/copernicus"
+        "url":"https://provider.geoos.org/copernicus"
+    }, {
+        "codigo":"shoa",
+        "url_bak":"http://localhost:8192",
+        "url":"https://provider.geoos.org/shoa"
     }],
     "plugins":["./base-plugin/BasePlugin.js", "./ow-plugin/OWPlugin.js"],
     "grupos":[{
